# twitchy2

./: .eslintrc.cjs  .gitignore  .prettierignore  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.svelte  app.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Chat.svelte  ChatMessage.svelte  Spinner.svelte  VirtualList.svelte
src/lib/: api.ts  badge.ts  bttv.ts  channel.ts  chat.ts  emote.ts  ffz.ts  login.ts  message.ts  tooltip.ts
src/routes/: __layout.svelte  chat.svelte  index.svelte
src/store/: accounts.ts
static/: twitch.html
